--- a/ScrumprojektGrupp2/ScrumprojektGrupp2/Views/Home/Contact.cshtml
+++ b/ScrumprojektGrupp2/ScrumprojektGrupp2/Views/Home/Contact.cshtml
@@ -9,7 +9,7 @@
     Örebro, WA 98052-6399<br />
     <abbr title="Phone">P:</abbr>
     425.555.0100
-</address>
+</address>HEJHEJHEJ</p>
 
 <address>
     <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
