--- a/ScrumprojektGrupp2/ScrumprojektGrupp2/Views/Home/Contact.cshtml
+++ b/ScrumprojektGrupp2/ScrumprojektGrupp2/Views/Home/Contact.cshtml
@@ -6,10 +6,10 @@
 
 <address>
     One Microsoft Way<br />
-    Örebro, WA 98052-6399<br />
+    Örebro, Sverige 98052-6399<br />
     <abbr title="Phone">P:</abbr>
     425.555.0100
-</address>HEJHEJHEJ</p>
+</address>
 
 <address>
     <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
